# pytorch-lightning

./: .Documentation(DeepSpeedStrategy)  .codecov.yml  .coveragerc  .deepsource.toml  .drone.jsonnet  .drone.yml  .env_local  .git-blame-ignore-revs  .gitignore  .gitmodules  .lightningignore  .markdownlint.yml  .mergify.yml  .pep8speaks.yml  .pre-commit-config.yaml  .prettierignore  .pyrightconfig.json  .readthedocs.yml  .run_local_tests.sh  .travis.yml  .typo-ci.yml  .update.sh  .yapfignore  0_trace.json  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Daphne &Elia  Dockerfile  FIX-ANALYSIS.md  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  README_app.md  README_new.md  README_pytorch.md  (+74 more)
.actions/: assistant.py  delete_cloud_lightning_apps.py  job_skipper.py  pull_legacy_checkpoints.sh  requirements.txt  setup_tools.py
.azure/: README.md  app-cloud-e2e.yml  app-cloud-store.yml  app-flagship.yml  app-flagships.yml  app-quick-start-e2e.yml  debug-hpu-tests.yml  gpu-benchmark.yml  gpu-benchmarks.yml  gpu-tests-fabric.yml  gpu-tests-lite.yml  gpu-tests-pytorch.yml  gpu-tests.yml  hpu-tests.yml  ipu-tests.yml  start.sh  tpu-tests.yml
.azure-pipelines/: gpu-benchmark.yml  gpu-tests.yml  gpu_benchmark.yml  hpu-tests.yml  ipu-tests.yml  run_hpu_tests.py
.circleci/: config.yml
.devbots/: needs-triage.yml
.github/: .mergify.yml  BECOMING_A_CORE_CONTRIBUTOR.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  README.md  advanced-issue-labeler.yml  approve_config.yml  auto-merge.yml  checkgroup.yml  dependabot.yml  file-filters.yml  gatekeeper-config_app.yml  gatekeeper-config_pytorch.yml  label-change.yml  labeler-config.yml  labeler.yml  lightning-probot.yml  markdown-links-config.json  markdown.links.config.json  mergify.yml  prepare-nightly_pkg-name.py  prepare-nightly_version.py  prepare_nightly.py  prune-packages.py  set-min-requirements.py  settings.yml  stale.yml
.storage/: boring_file.txt
<_io.BufferedRandom name=105>/: .metadata  __0_0.distcp  __1_0.distcp
benchmark/: train.py  train_fabric.py
benchmarks/: __init__.py  generate_comparison.py  parity_modules.py  test_basic_parity.py  test_parity.py  test_pipe_parity.py  test_rnn_parity.py  test_sharded_correctness.py  test_sharded_parity.py  test_trainer_parity.py  utilities.py
demo/: basic_trainer.py  example_model.py  fully_featured_trainer.py  trainer.py
docker/: Dockerfile  README.md
dockers/: README.md
docs/: .build_docs.sh  .readthedocs.yaml  Examples.md  Makefile  README.md  create-symlinks.py  crossroad.html  doc_requirements.txt  generate_docs_for_tags.sh  index.md  make.bat  problem description.md  redirect.html  requirements.txt  rtfd-build.sh  rtfd-pytorch.sh
dummy/: factories.py  setup.py
examples/: README.md  __init__.py  a.py  run_ddp_examples.sh  run_fabric_examples.sh  run_lite_examples.sh  run_pl_examples.sh  test_pl_examples.py
legacy/: README.md  back-compatible-versions.txt  checkpoints.zip.1  generate_checkpoints.sh  simple_classif_training.py  zero_training.py
multi_node_tests/: test_multi_nodes_gpu.py
notebooks/: 01-mnist-hello-world.ipynb  01-mnist-hello-world.py  01_mnist_hello_world.ipynb  02-datamodules.ipynb  02-datamodules.py  02_datamodules.ipynb  03-basic-gan.ipynb  03-basic-gan.py  03_basic_gan.ipynb  04-transformers-text-classification.ipynb  04-transformers-text-classification.py  04_transformers_text_classification.ipynb  05-trainer-flags-overview.ipynb  06-cifar10-baseline.ipynb  06-mnist-tpu-training.ipynb  06-tpu-training.ipynb  07-cifar10-baseline.ipynb  08-Domain-specific-demos.ipynb  08-semantic-segmentation.ipynb  README.md  convert_tags_hdict.ipynb
notes/: inheritance.py
pl_develop/: __init__.py  dataloaders.py  datasets.py  model_template.py  model_test_dataloaders.py  model_train_dataloaders.py  model_train_steps.py  model_valid_dataloaders.py  model_valid_epoch_ends.py  model_valid_steps.py  models.py
pl_devtools/: __about__.py  __init__.py  my_module.py  setup_tools.py
pl_examples/: README.md  The_BoringModel.ipynb  __init__.py  boring_model.py  boring_script.py  bug_report_model.py  debug.py  example1.py  example2.py  model_resume.py  overfit.py  pure_broadcast.py  repro.py  reprod.py  requirements.txt  run-example-wandb-save-config-callback-clash-workaournd.sh  run_ddp-examples.sh  run_examples-args.sh  run_examples.sh  state.py  test_examples.py  toy.py  v3_example.py  yield.py  yield2.py  yield_ddp.py  yield_lightning.py
pl_examples/pytorch_ecosystem/pytorch_geometric/: README.md  cora_dna.py  lightning.py  pyproject.toml
pl_sandbox/: __about__.py  __init__.py  setup_tools.py
playground/: model.py  test.py  train.py
pytorch_lightning/: __about__.py  __info__.py  __init__.py  info.py  setup_tools.py  trainer_main.py
pytorch_lightning.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
requirements/: README.md  _check_avail_extras.py  _check_avail_strategies.py  _docs.txt  _tests.txt  adjust-versions.py  adjust_versions.py  base.txt  check-avail-extras.py  check-avail-strategies.py  ci.txt  cli.txt  collect_env_details.py  core.txt  default.txt  dev-docs.txt  dev-tests.txt  devel-base.txt  devel.txt  docs.txt  doctests.txt  ecosystem.txt  examples.txt  extra.txt  gha-package.txt  gha-schema.txt  hpu.txt  install_AMP.sh  install_ONNX.sh  install_onnx.sh  locked.yaml  loggers.txt  minimal.txt  strategies.txt  test.txt  typing.txt
research_lib/: trainer_main.py
scripts/: adjust-torch-versions.py  inject-selector-script.py  run_standalone_tests.sh
src/: app-ui-version.info  run_ddp_examples.sh  version.info
test/: README.md  run_standalone_tests.sh  standalone_tests.sh
testFile/: test_rich_progress.py
test_multi_nodes/: test_multi_nodes_gpu.py
tests/: .coveragerc  Dockerfile  README.md  __init__.py  app.py  collect_env_details.py  conftest.py  debug.py  install_AMP.sh  lit_gradio_interface_demo.py  mnode-tests.txt  mnode_tests.txt  multi.rc  requirements-devel.txt  requirements.txt  run_diagnostics.py  run_standalone_tests.sh  special_tests.sh  standalone_tests.sh  (+18 more)
(+7240 files in other folders)
