# Copyright The PyTorch Lightning team.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[metadata]
name = pytorch-lightning
author = Lightning-AI et al.
url = https://github.com/Lightning-AI/lightning

[tool:pytest]
norecursedirs =
    .git
    .github
    dist
    build
    docs
addopts =
    --strict-markers
    --doctest-modules
    --color=yes
    --disable-pytest-warnings
    --ignore=legacy/checkpoints
markers =
    cloud:Run the cloud tests for example
filterwarnings =
    error::FutureWarning
xfail_strict = true
junit_duration_report = call


[coverage:report]
exclude_lines =
    pragma: no-cover
    warnings
    pass
    rank_zero_warn
    raise NotImplementedError


[flake8]
max-line-length = 120
exclude =
    .tox,
    *.egg
    build
    temp
    _notebooks
    # FIXME!
    docs/source-app/**

select = E,W,F
doctests = True
verbose = 2
# https://pep8.readthedocs.io/en/latest/intro.html#error-codes
format = pylint
ignore =
    # Ignore "Do not assign a lambda expression, use a def"
    E731
    # Ignore "Line break occurred before a binary operator"
    W503
    # Ignore "whitespace before ':'"
    E203
